agregado de await en eliminiar y agregar multiple

--- a/menu.html
+++ b/menu.html
@@ -35,6 +35,7 @@
                 <Input type="number" name="precio" required />
                 <label for="origen">Origen</label>
                 <select name="origen">
+                    <option>España</option>
                     <option>India</option>
                     <option>Italia</option>
                     <option>Grecia</option>
@@ -70,6 +71,7 @@
                 <Input type="number" name="precio" required />
                 <label for="origen">Origen</label>
                 <select name="origen">
+                    <option>España</option>
                     <option>India</option>
                     <option>Italia</option>
                     <option>Grecia</option>
